# weather_wallpaper

./: .gitignore  Cargo.toml  README.md  data.json  weather_conditions.json
.github/workflows/: weather_wallpaper.yml
src/: files.rs  gui.rs  main.rs  settings.rs  wallpaper.rs  wallpaper_tags.rs  weather.rs  weather_api.rs  weather_conditions.json
